--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <li>
                         <div class="client-container">
                             <a href="">
-                                <svg class="client-icon">
+                                <svg class="client-icon" width="100" height="100" >
                                     <use href="./images/spritee.svg#icon-client-one"></use>
                                 </svg>
                             </a>
