--- a/index.html
+++ b/index.html
@@ -276,59 +276,47 @@
             <h2 class="client-tittle">Постоянные клиенты</h2>
             <div class="container">
                 <ul class="client-list">
-                    <li>
-                        <div class="client-container">
+                    <li class="client">
                             <a href="">
                                 <svg class="client-icon" width="100" height="100" >
                                     <use href="./images/sprite.svg#icon-client-one"></use>
                                 </svg>
                             </a>
-                        </div>
                     </li>
-                    <li>
-                        <div class="client-container">
+                    <li class="client">
                             <a href="">
                                 <svg class="client-icon" width="100" height="100">
                                     <use href="./images/sprite.svg#icon-client-two"></use>
                                 </svg>
                             </a>
-                        </div>
                     </li>
-                    <li>
-                        <div class="client-container">
+                    <li class="client">
                             <a href="">
                                 <svg class="client-icon" width="100" height="100">
                                     <use href="./images/sprite.svg#icon-client-three"></use>
                                 </svg>
-                            </a> 
-                        </div>
+                            </a>
                     </li>
-                    <li>
-                        <div class="client-container">
+                    <li class="client">
                             <a href="">
                                 <svg class="client-icon" width="100" height="100">
                                     <use href="./images/sprite.svg#icon-client-four"></use>
                                 </svg>
                             </a>
-                        </div>
                     </li>
-                    <li>
-                        <div class="client-container">
+                    <li class="client">
                             <a href="">
                                 <svg class="client-icon" width="100" height="100">
                                     <use href="./images/sprite.svg#icon-client-five"></use>
                                 </svg>
                             </a>
-                        </div>
                     </li>
-                    <li>
-                        <div class="client-container">
+                    <li class="client">
                             <a href="">
                                 <svg class="client-icon" width="100" height="100">
                                     <use href="./images/sprite.svg#icon-client-six"></use>
                                 </svg>
                             </a>
-                        </div>
                     </li>
                 </ul>
             </div>
@@ -347,7 +335,7 @@
                 </address>
             </div>
             <section class="footer-section">
-                <h3>Присоединяйтесь</h3>
+                <h3 class="join-tittle">Присоединяйтесь</h3>
                 <ul class="join-list">
                     <li class="join-link">
                         <a href="">
