--- a/portfolio.html
+++ b/portfolio.html
@@ -132,21 +132,55 @@
                 </ul>
             </div>
         </section>
-
     </main>
-
 <footer class="footer">
     <div class="container">
-        <a href="./index.html" class="logo"> <span class="first-part-logo">Web</span>Studio</a>
-        <address class="footer-adress">
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@example.com" class="contact">info@example.com</a>
-            <a href="tel:+38 099 111 11 11" class="contact">+38 099 111 11 11</a>
-        </address>
+        <div class="footer-container">
+            <a href="./index.html" class="logo"> <span class="first-part-logo">Web</span>Studio</a>
+            <address class="footer-adress">
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+                <a href="mailto:info@example.com" class="contact">info@example.com</a>
+                <a href="tel:+38 099 111 11 11" class="contact">+38 099 111 11 11</a>
+            </address>
+        </div>
+        <section class="footer-section">
+            <h3>Присоединяйтесь</h3>
+            <ul class="join-list">
+                <li class="join-link">
+                    <a href="">
+                        <svg class="join-icon">
+                            <use href="./images/sprite.svg#icon-instagram">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="join-link">
+                    <a href="">
+                        <svg class="join-icon">
+                            <use href="./images/sprite.svg#icon-twitter">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="join-link">
+                    <a href="">
+                        <svg class="join-icon facebook-icon">
+                            <use href="./images/sprite.svg#icon-facebook">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="join-link">
+                    <a href="">
+                        <svg class="join-icon">
+                            <use href="./images/sprite.svg#icon-linkedin">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </section>
     </div>
 </footer>
-    <div  class="test-box">
-
-    </div>
 </body>
 </html>
