--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <div class="container">
                 <ul class="client-list">
                     <li class="client">
-                            <a href="">
+                            <a href="client-link">
                                 <svg class="client-icon" width="100" height="100" >
                                     <use href="./images/sprite.svg#icon-client-one"></use>
                                 </svg>
