--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1 class="hero-tittle">
             Эффективные решения <br> для вашего бизнеса
             </h1>
-            <button type="button" class="hero-button" href="">Заказать услугу</button> 
+            <button type="button" class="hero-button">Заказать услугу</button> 
         </section>
 
         
@@ -278,42 +278,42 @@
                 <ul class="client-list">
                     <li class="client">
                             <a href="client-link">
-                                <svg class="client-icon" width="100" height="100" >
+                                <svg class="client-icon" >
                                     <use href="./images/sprite.svg#icon-client-one"></use>
                                 </svg>
                             </a>
                     </li>
                     <li class="client">
-                            <a href="">
-                                <svg class="client-icon" width="100" height="100">
+                            <a href="client-link">
+                                <svg class="client-icon">
                                     <use href="./images/sprite.svg#icon-client-two"></use>
                                 </svg>
                             </a>
                     </li>
                     <li class="client">
-                            <a href="">
-                                <svg class="client-icon" width="100" height="100">
+                            <a href="client-link">
+                                <svg class="client-icon">
                                     <use href="./images/sprite.svg#icon-client-three"></use>
                                 </svg>
                             </a>
                     </li>
                     <li class="client">
-                            <a href="">
-                                <svg class="client-icon" width="100" height="100">
+                            <a href="client-link">
+                                <svg class="client-icon" >
                                     <use href="./images/sprite.svg#icon-client-four"></use>
                                 </svg>
                             </a>
                     </li>
                     <li class="client">
-                            <a href="">
-                                <svg class="client-icon" width="100" height="100">
+                            <a href="client-link">
+                                <svg class="client-icon" >
                                     <use href="./images/sprite.svg#icon-client-five"></use>
                                 </svg>
                             </a>
                     </li>
                     <li class="client">
-                            <a href="">
-                                <svg class="client-icon" width="100" height="100">
+                            <a href="client-link">
+                                <svg class="client-icon" >
                                     <use href="./images/sprite.svg#icon-client-six"></use>
                                 </svg>
                             </a>
