--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                 <div class="container">
                     <ul class="team-list">
                         <li class="team">
-                            <img src="./images/index-images/11.jpg" alt="Игорь Демьяненко" Width="270" height="260">
-                            <h3>Игорь Демьяненко</h3>
+                            <img src="./images/index-images/11.jpg" alt="Игорь Демьяненко" Width="270" height="260" class="team-image">
+                            <h3 class="team-name">Игорь Демьяненко</h3>
                             <p>Product Designer</p>
                             <ul class="team-icon-list">
                                 <li>
@@ -153,7 +153,7 @@
                             </ul>
                         </li>
                         <li class="team">
-                            <a href=""><img src="./images/index-images/22.jpg" alt="Ольга Репина" Width="270" height="260"></a>
+                            <a href=""><img src="./images/index-images/22.jpg" alt="Ольга Репина" Width="270" height="260" class="team-image"></a>
                             <h3>Ольга Репина</h3>
                             <p>Frontend Developer</p>
                             <ul class="team-icon-list">
@@ -192,7 +192,7 @@
                             </ul>
                         </li>
                         <li class="team">
-                            <a href=""><img src="./images/index-images/33.jpg" alt="Николай Тарасов" Width="270" height="260"></a>
+                            <a href=""><img src="./images/index-images/33.jpg" alt="Николай Тарасов" Width="270" height="260" class="team-image"></a>
                             <h3>Николай Тарасов</h3>
                             <p>Marketing</p>
                             <ul class="team-icon-list">
@@ -231,7 +231,7 @@
                             </ul>
                         </li>
                         <li class="team">
-                            <a href=""><img src="./images/index-images/44.jpg" alt="Михаил Ермаков" Width="270" height="260"></a>
+                            <a href=""><img src="./images/index-images/44.jpg" alt="Михаил Ермаков" Width="270" height="260" class="team-image"></a>
                             <h3>Михаил Ермаков</h3>
                             <p>UI Designer</p>
                             <ul class="team-icon-list">
