--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <p>Product Designer</p>
                             <ul class="team-icon-list">
                                 <li>
-                                    <a href="">
+                                    <a href="" class="team-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-instagram">
                                             </use>
@@ -127,7 +127,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="" class="team-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-twitter">
                                             </use>
@@ -135,14 +135,14 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="" class="team-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-facebook">
                                             </use>
                                         </svg>
                                     </a>
                                 </li>
-                                <a href="">
+                                <a href="" class="team-link">
                                     <li>
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-linkedin">
@@ -158,7 +158,7 @@
                             <p>Frontend Developer</p>
                             <ul class="team-icon-list">
                                 <li>
-                                    <a href="">
+                                    <a href="" class="team-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-instagram">
                                             </use>
@@ -166,7 +166,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="" class="team-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-twitter">
                                             </use>
@@ -174,14 +174,14 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="" class="team-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-facebook">
                                             </use>
                                         </svg>
                                     </a>
                                 </li>
-                                <a href="">
+                                <a href="" class="team-link">
                                     <li>
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-linkedin">
@@ -197,7 +197,7 @@
                             <p>Marketing</p>
                             <ul class="team-icon-list">
                                 <li>
-                                    <a href="">
+                                    <a href="" class="team-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-instagram">
                                             </use>
@@ -205,7 +205,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="" class="team-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-twitter">
                                             </use>
@@ -213,14 +213,14 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="" class="team-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-facebook">
                                             </use>
                                         </svg>
                                     </a>
                                 </li>
-                                <a href="">
+                                <a href="" class="team-link">
                                     <li>
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-linkedin">
@@ -236,7 +236,7 @@
                             <p>UI Designer</p>
                             <ul class="team-icon-list">
                                 <li>
-                                    <a href="">
+                                    <a href="" class="team-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-instagram">
                                             </use>
@@ -244,7 +244,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="" class="team-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-twitter">
                                             </use>
@@ -252,15 +252,15 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="" class="team-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-facebook">
                                             </use>
                                         </svg>
                                     </a>
                                 </li>
-                                <a href="">
-                                    <li>
+                                <a href="" >
+                                    <li class="team-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-linkedin">
                                             </use>
@@ -337,32 +337,32 @@
             <section class="footer-section">
                 <h3 class="join-tittle">Присоединяйтесь</h3>
                 <ul class="join-list">
-                    <li class="join-link">
-                        <a href="">
+                    <li class="join-one" >
+                        <a href="" class="join-link">
                             <svg class="join-icon">
                                 <use href="./images/sprite.svg#icon-instagram">
                                 </use>
                             </svg>
                         </a>
                     </li>
-                    <li class="join-link">
-                        <a href="">
+                    <li class="join-one" >
+                        <a href="" class="join-link">
                             <svg class="join-icon">
                                 <use href="./images/sprite.svg#icon-twitter">
                                 </use>
                             </svg>
                         </a>
                     </li>
-                    <li class="join-link">
-                        <a href="">
+                    <li class="join-one" >
+                        <a href="" class="join-link">
                             <svg class="join-icon facebook-icon">
                                 <use href="./images/sprite.svg#icon-facebook">
                                 </use>
                             </svg>
                         </a>
                     </li>
-                    <li class="join-link">
-                        <a href="">
+                    <li class="join-one" >
+                        <a href="" class="join-link">
                             <svg class="join-icon">
                                 <use href="./images/sprite.svg#icon-linkedin">
                                 </use>
